mdmCeneveo/src/objects/T_E__c.object
<CustomObject>
    <description>Travel and Expense module for Sales and Marketing</description>
    <fields>
        <fullName>Account_1_OPEN_ACTIVITIES_TEXT__c</fullName>
        <label>Account #1 OPEN ACTIVITIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account #1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>T&amp;E</relationshipLabel>
        <relationshipName>T_E</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_2_OPEN_ACTIVITIES_TEXT__c</fullName>
        <label>Account #2 OPEN ACTIVITIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account #2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>T&amp;E (Account #2)</relationshipLabel>
        <relationshipName>T_E2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account #3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>T&amp;E (Account #3)</relationshipLabel>
        <relationshipName>T_E1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_4_OPEN_ACTIVITIES_TEXT__c</fullName>
        <label>Account #4 OPEN ACTIVITIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>teXT(Owner:User.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Departure__c</fullName>
        <label>Date of Departure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Return__c</fullName>
        <label>Date of Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Submit__c</fullName>
        <formula>Expense_Date__c - Ledger_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Submit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_T_E_Amount_Air_Train_Hotel__c</fullName>
        <formula>Flight_Cost__c + ( Hotel_Cost__c * Number_of_Nights__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est T&amp;E Amount (Air/Train + Hotel)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Purpose__c</fullName>
        <label>Expense Purpose</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Cost__c</fullName>
        <label>Estimated Air/Train Fare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Cost__c</fullName>
        <label>Hotel $Rate/Night</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ledger_Date__c</fullName>
        <label>Ledger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEA_Number__c</fullName>
        <label>TEA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travelling_From__c</fullName>
        <label>Travelling From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travelling_To__c</fullName>
        <label>Travelling To</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Location__c</fullName>
        <label>Vendor Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>T&amp;E</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>T&amp;E</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;E</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>